plugins {
  id 'com.gradleup.shadow' version "9.0.2" apply false
}

subprojects {
  apply plugin: 'java'

  repositories { mavenCentral() }

  java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
  }

  tasks.withType(Test).configureEach { useJUnitPlatform() }
}
